--- a/templates/poe2.html
+++ b/templates/poe2.html
@@ -6,7 +6,7 @@
 
 <h1 class="center wh_01">{{ mainTitle }} : POE2</h1>
 <p class="center no-wrap">
-    {{ image_hightlight_text }}
+    {{ highlight_text }}
 </p>
 <div class="grid-4xN">
     {% for card in cards %}
