--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,13 @@
         class="no-wrap">Path of Exile Item Creator</a>.<br>
     For each item I present the core gameplay intentions and a comment about the overall flavor of the item.<br>
     <br>
+    These items use art from the game Path of Exile, I took the images from the <a
+        href="https://www.poewiki.net/wiki/Path_of_Exile_Wiki" target="_blank">game's wiki</a>.<br>
+    <br>
     Most of these items are made as jewels but should probably be adapted to other item types, <br>
     they may also be unbalanced, but the focus should be on the concept and flavor of the item. <br>
     <br>
-    These items use art from the game Path of Exile, I took the images from the <a
-        href="https://www.poewiki.net/wiki/Path_of_Exile_Wiki" target="_blank">game's wiki</a>.<br>
+    The Flavor texts are Edgy but hopefully just the right amount.<br>
 </p>
 <div class="wh_02"></div>
 <h2 class="underline margin_01"><a href="{{ url_for('poe1') }}">POE1</a></h2>
