--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,9 @@
 <h1 class="center wh_01">{{ mainTitle }}</h1>
 <h2 class="center underline">Presentation :</h2>
 <p class="center no-wrap fontSize_01">
-    I'm showcasing the Path Of Exile items I made using <a href="https://poeitem.crunchyintheory.com/create" target="_blank"
-        class="no-wrap">Path of Exile Item Creator</a>.<br>
+    This is a fan project where I'm showcasing the Path Of Exile items I made using
+    <a href="https://poeitem.crunchyintheory.com/create" target="_blank" class="no-wrap">Path of Exile Item Creator</a>.<br>
+    <br>
     For each item I present the core gameplay intentions and a comment about the overall flavor of the item.<br>
     <br>
     These items use art from the game Path of Exile, I took the images from the <a
@@ -17,7 +18,7 @@
     Most of these items are made as jewels but should probably be adapted to other item types, <br>
     they may also be unbalanced, but the focus should be on the concept and flavor of the item. <br>
     <br>
-    The Flavor texts are Edgy but hopefully just the right amount.<br>
+    Some items are edgy but hopefully just the right amount.<br>
 </p>
 <div class="wh_02"></div>
 <h2 class="underline margin_01"><a href="{{ url_for('poe1') }}">POE1</a></h2>
